--- a/templates/home.tmpl
+++ b/templates/home.tmpl
@@ -33,18 +33,18 @@
 	</div>
 	<div class="ui stackable middle very relaxed page grid">
 		<div class="eight wide center column">
-			<h1 class="hero ui icon header">
+			<h1 style = "display:none;" class="hero ui icon header">
 				{{svg "octicon-rocket"}} {{.i18n.Tr "startpage.lightweight"}}
 			</h1>
-			<p class="large">
+			<p style = "display:none;" class="large">
 				{{.i18n.Tr "startpage.lightweight_desc" | Str2html}}
 			</p>
 		</div>
-		<div class="eight wide center column">
-			<h1 class="hero ui icon header">
+		<div style = "display:none;" class="eight wide center column">
+			<h1 style = "display:none;" class="hero ui icon header">
 				{{svg "octicon-code"}} {{.i18n.Tr "startpage.license"}}
 			</h1>
-			<p class="large">
+			<p style = "display:none;" class="large">
 				{{.i18n.Tr "startpage.license_desc" | Str2html}}
 			</p>
 		</div>
